mesh.pp.node upgraded to use json protocol with generated c++ code defining structs based on a simple idl definition, for now code generation is done manually and remains part of git code

--- a/src/mesh.pp.node/CMakeLists.txt
+++ b/src/mesh.pp.node/CMakeLists.txt
@@ -1,6 +1,8 @@
 # define the executable
 add_executable(mesh.pp.node
-    main.cpp)
+    main.cpp
+    message.hpp)
+#    message.gen.hpp)
 
 # libraries this module links to
 target_link_libraries(mesh.pp.node PUBLIC
