cmake and structure refactor

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib/belt.pp")
 add_subdirectory(belt.pp)
 add_subdirectory(mesh.pp)
 add_subdirectory(mesh.pp.node)
+add_subdirectory(kbucket)
 add_subdirectory(test_app)
 
 # following is used for find_package functionality
