--- a/src/mesh.pp.node/CMakeLists.txt
+++ b/src/mesh.pp.node/CMakeLists.txt
@@ -1,8 +1,15 @@
+# generate message.gen.hpp from message.idl
+add_custom_command (
+  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/message.gen.hpp
+  MAIN_DEPENDENCY message.idl
+  COMMAND idl ${CMAKE_CURRENT_SOURCE_DIR}/message.idl ${CMAKE_CURRENT_SOURCE_DIR}/message.gen.hpp
+)
+
 # define the executable
 add_executable(mesh.pp.node
     main.cpp
-    message.hpp)
-#    message.gen.hpp)
+    message.hpp
+    message.gen.hpp)
 
 # libraries this module links to
 target_link_libraries(mesh.pp.node PUBLIC
