--- a/src/mesh.pp.node/CMakeLists.txt
+++ b/src/mesh.pp.node/CMakeLists.txt
@@ -10,7 +10,9 @@ add_executable(mesh.pp.node
     main.cpp
     message.hpp
     message.gen.hpp
-    konnection.hpp)
+    konnection.hpp
+    nodelookup.hpp
+    )
 
 # libraries this module links to
 target_link_libraries(mesh.pp.node PUBLIC
