refactored Konnection class into konnection.hpp

--- a/src/mesh.pp.node/CMakeLists.txt
+++ b/src/mesh.pp.node/CMakeLists.txt
@@ -9,7 +9,8 @@ add_custom_command (
 add_executable(mesh.pp.node
     main.cpp
     message.hpp
-    message.gen.hpp)
+    message.gen.hpp
+    konnection.hpp)
 
 # libraries this module links to
 target_link_libraries(mesh.pp.node PUBLIC
