--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib/belt.pp")
 if(NOT BELT_PP_LOADED)
 add_subdirectory(belt.pp)
 endif()
+add_subdirectory(libp2psocket)
 add_subdirectory(mesh.pp)
 add_subdirectory(mesh.pp.node)
 add_subdirectory(kbucket)
