--- a/src/mesh.pp.node/CMakeLists.txt
+++ b/src/mesh.pp.node/CMakeLists.txt
@@ -16,7 +16,7 @@ add_executable(mesh.pp.node
     )
 
 # libraries this module links to
-target_link_libraries(mesh.pp.node PUBLIC
+target_link_libraries(mesh.pp.node PRIVATE
     mesh.pp
     packet
     socket
