socket and message features

--- a/src/libp2psocket/CMakeLists.txt
+++ b/src/libp2psocket/CMakeLists.txt
@@ -20,9 +20,10 @@ add_library(p2psocket SHARED
 target_link_libraries(p2psocket PUBLIC
     mesh.pp
     belt.pp
-    socket
     packet
-    utility)
+    utility
+    PRIVATE
+    socket)
 
 # what to do on make install
 install(TARGETS p2psocket
@@ -33,6 +34,4 @@ install(TARGETS p2psocket
 install(FILES
     global.hpp
     p2psocket.hpp
-    message.hpp
-    message.gen.hpp
     DESTINATION include/mesh.pp/libp2psocket)
