--- a/src/libp2psocket/CMakeLists.txt
+++ b/src/libp2psocket/CMakeLists.txt
@@ -10,9 +10,6 @@ add_definitions(-DP2P_LIBRARY)
 # define the shared library
 add_library(p2psocket SHARED
     global.hpp
-    kbucket.hpp
-    konnection.hpp
-    nodelookup.hpp
     p2psocket.cpp
     p2psocket.hpp
     p2pstate.cpp
@@ -27,7 +24,8 @@ target_link_libraries(p2psocket PUBLIC
     packet
     PRIVATE
     utility
-    socket)
+    socket
+    kbucket)
 
 # what to do on make install
 install(TARGETS p2psocket
