cmake to install dll files

--- a/src/libp2psocket/CMakeLists.txt
+++ b/src/libp2psocket/CMakeLists.txt
@@ -30,6 +30,7 @@ target_link_libraries(p2psocket PUBLIC
 # what to do on make install
 install(TARGETS p2psocket
         EXPORT mesh.pp.package
+        RUNTIME DESTINATION bin/mesh.pp
         LIBRARY DESTINATION lib/mesh.pp
         ARCHIVE DESTINATION lib/mesh.pp/archive)
 
