--- a/src/mesh.pp.node/CMakeLists.txt
+++ b/src/mesh.pp.node/CMakeLists.txt
@@ -25,5 +25,7 @@ target_link_libraries(mesh.pp.node PRIVATE
 # what to do on make install
 install(TARGETS mesh.pp.node
         EXPORT mesh.pp.package
-        RUNTIME DESTINATION bin/mesh.pp)
+        RUNTIME DESTINATION ${MESHPP_INSTALL_DESTINATION_RUNTIME}
+        LIBRARY DESTINATION ${MESHPP_INSTALL_DESTINATION_LIBRARY}
+        ARCHIVE DESTINATION ${MESHPP_INSTALL_DESTINATION_ARCHIVE})
 
