--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,30 @@
-# don't skip the full RPATH for the build tree
-SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
+if( WIN32 )
+    SET(MESHPP_INSTALL_DESTINATION_RUNTIME bin)
+    SET(MESHPP_INSTALL_DESTINATION_LIBRARY lib)
+    SET(MESHPP_INSTALL_DESTINATION_ARCHIVE lib)
+    SET(MESHPP_INSTALL_DESTINATION_INCLUDE include)
+else( WIN32 )
+    SET(MESHPP_INSTALL_DESTINATION_RUNTIME bin/mesh.pp)
+    SET(MESHPP_INSTALL_DESTINATION_LIBRARY lib/mesh.pp)
+    SET(MESHPP_INSTALL_DESTINATION_ARCHIVE lib/mesh.pp)
+    SET(MESHPP_INSTALL_DESTINATION_INCLUDE include/mesh.pp)
+endif( WIN32 )
 
-# when building, don't use the install RPATH already
-# (but later on when installing)
-SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+if( NOT WIN32 )
+    # don't skip the full RPATH for the build tree
+    SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
 
-SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib/mesh.pp;${CMAKE_INSTALL_PREFIX}/lib/belt.pp")
+    # when building, don't use the install RPATH already
+    # (but later on when installing)
+    SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+
+    SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib/mesh.pp;${CMAKE_INSTALL_PREFIX}/lib/belt.pp")
+
+    # not sure if there is any use from below command
+    # add the automatically determined parts of the RPATH
+    # which point to directories outside the build tree to the install RPATH
+    #SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+endif()
 
 if(NOT BELT_PP_LOADED)
 add_subdirectory(belt.pp)
