cryptopp byte is moved from global into the CryptoPP namespace, add a workaround

--- a/src/mesh.pp/CMakeLists.txt
+++ b/src/mesh.pp/CMakeLists.txt
@@ -75,6 +75,7 @@ install(TARGETS mesh.pp
         DESTINATION ${MESHPP_INSTALL_DESTINATION_LIBRARY})
 
 set(SRC_FILES
+    cryptopp_byte.hpp
     global.hpp
     fileutility.hpp
     processutility.hpp
