--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,7 @@ add_subdirectory(mesh.pp)
 add_subdirectory(mesh.pp.node)
 add_subdirectory(kbucket)
 add_subdirectory(test_app)
+add_subdirectory(test_cryptopp)
 
 # following is used for find_package functionality
 install(FILES mesh.pp-config.cmake DESTINATION ${MESHPP_INSTALL_DESTINATION_LIBRARY})
