small fixes, test executables in separate cmakelists

--- a/src/test_skpk/CMakeLists.txt
+++ b/src/test_skpk/CMakeLists.txt
@@ -1,13 +1,15 @@
 # define the executable
-add_executable(test_cryptopp
-    main.cpp)
+add_executable(test_skpk
+    main.cpp
+    words.cpp
+    words.hpp)
 
 # libraries this module links to
-target_link_libraries(test_cryptopp PRIVATE
+target_link_libraries(test_skpk PRIVATE
     mesh.pp)
 
 # what to do on make install
-install(TARGETS test_cryptopp
+install(TARGETS test_skpk
         EXPORT mesh.pp.package
         RUNTIME DESTINATION ${MESHPP_INSTALL_DESTINATION_RUNTIME}
         LIBRARY DESTINATION ${MESHPP_INSTALL_DESTINATION_LIBRARY}
