--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ endif()
 if(NOT BELT_PP_LOADED)
 add_subdirectory(belt.pp)
 endif()
+add_subdirectory(libcryptoutility)
 add_subdirectory(libsystemutility)
 add_subdirectory(libp2psocket)
 add_subdirectory(mesh.pp)
