gen file ignored

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /src/libp2psocket/message.gen.hpp
 /src/libsystemutility/file_attributes.gen.hpp
 /src/mesh.pp.node/message.gen.hpp
+/src/test_socket/message.gen.hpp
