--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /src/libsystemutility/file_attributes.gen.hpp
 /src/mesh.pp.node/message.gen.hpp
 /src/test_socket/message.gen.hpp
+/src/libsystemutility/data.gen.hpp
