refactor: remove rollback keep discard only

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,7 @@ add_subdirectory(mesh.pp)
 add_subdirectory(mesh.pp.node)
 add_subdirectory(kbucket)
 add_subdirectory(test_app)
+add_subdirectory(test_containers)
 add_subdirectory(test_cryptopp)
 add_subdirectory(test_skpk)
 add_subdirectory(test_socket)
