prepare p2psocket for signed messeges and id generation based on public key

--- a/src/libp2psocket/CMakeLists.txt
+++ b/src/libp2psocket/CMakeLists.txt
@@ -23,6 +23,7 @@ target_link_libraries(p2psocket PUBLIC
     belt.pp
     packet
     PRIVATE
+    cryptoutility
     utility
     socket
     kbucket)
