--- a/src/mesh.pp/CMakeLists.txt
+++ b/src/mesh.pp/CMakeLists.txt
@@ -55,7 +55,10 @@ MESSAGE(STATUS "${Boost_LIBRARIES}")
 list( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules" )
 
 find_package(CryptoPP REQUIRED)
-find_package(rocksdb REQUIRED)
+find_package(rocksdb)
+if(ROCKSDB_FOUND)
+    set(GLOB_ROCKSDB_FOUND 1 CACHE STRING "${ROCKSDB_INCLUDE_DIR}")
+endif()
 
 # interface library for headers only module
 add_library(mesh.pp INTERFACE)
@@ -72,6 +75,7 @@ target_include_directories(mesh.pp INTERFACE
 target_link_libraries(mesh.pp INTERFACE
     #boost
     cryptopp
+    rocksdb
     ${Boost_LIBRARIES}
     belt.pp
     )
