add logging lib in mesh.pp that has dependency on boost and can properly work with unicode file paths

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,8 +30,9 @@ if(NOT BELT_PP_LOADED)
 add_subdirectory(belt.pp)
 endif()
 add_subdirectory(libcryptoutility)
-add_subdirectory(libsystemutility)
+add_subdirectory(libmlog)
 add_subdirectory(libp2psocket)
+add_subdirectory(libsystemutility)
 add_subdirectory(mesh.pp)
 add_subdirectory(kbucket)
 add_subdirectory(test_app)
