--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/belt.pp"]
 	path = src/belt.pp
 	url = https://github.com/PubliqNetwork/belt.pp
+[submodule "src/cmake_utility"]
+	path = src/cmake_utility
+	url = https://github.com/PubliqNetwork/cmake_utility
