--- a/src/test_cryptopp/CMakeLists.txt
+++ b/src/test_cryptopp/CMakeLists.txt
@@ -5,7 +5,8 @@ add_executable(test_cryptopp
 # libraries this module links to
 target_link_libraries(test_cryptopp PRIVATE
     mesh.pp
-    belt.pp)
+    belt.pp
+    cryptopp)
 
 # what to do on make install
 install(TARGETS test_cryptopp
