--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/belt.pp"]
 	path = src/belt.pp
-	url = https://github.com/PubliqNetwork/belt.pp
+	url = https://github.com/publiqnet/belt.pp
 [submodule "src/cmake_utility"]
 	path = src/cmake_utility
 	url = https://github.com/PubliqNetwork/cmake_utility
