session related stuff shall stay in mesh.pp forever and ever, from now on

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,7 @@ endif()
 add_subdirectory(libcryptoutility)
 add_subdirectory(libmlog)
 add_subdirectory(libp2psocket)
+add_subdirectory(libsessionutility)
 add_subdirectory(libsystemutility)
 add_subdirectory(mesh.pp)
 add_subdirectory(kbucket)
