--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 /src/libsystemutility/file_attributes.gen.hpp
 /src/test_socket/message.gen.hpp
 /src/libsystemutility/data.gen.hpp
+/src/libsystemutility/pid.gen.hpp
 *.DS_Store
 src/test_containers/message.gen.hpp
